@@ -20,6 +20,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Open files in the background to avoid "not responding" warnings. Thanks ariqhadiyan for reporting.
  * Fix: Force main window to fit screen whenever the docks change, to avoid spills beyond the edge of the screen. Thanks Xkower for reporting.
  * Fix: Don't load ORA files in parallel on Android. This is slower, but avoids the application getting terminated for using too much memory. Thanks ariqhadiyan for reporting.
+ * Fix: Make keyboard modifiers work better on Android. Thanks ariqhadiyan for reporting.
 
 2023-11-12 Version 2.2.0-beta.10
  * Fix: Don't deadlock on first startup. Thanks to Hail, lowontrash, FARBOL234, Dorokinyo and hamlin for reporting.
